@@ -7,7 +7,7 @@
         <font>font_small</font>
         <textcolor>dialog_fg_70</textcolor>
         <focusedcolor>dialog_fg_70</focusedcolor>
-        <selectedcolor>Highlight2</selectedcolor>
+        <selectedcolor>$VAR[ColorHighlight]</selectedcolor>
         <disabledcolor>dialog_fg_30</disabledcolor>
     </default>
 
@@ -18,7 +18,7 @@
         <textoffsetx>30</textoffsetx>
         <textcolor>dialog_fg_70</textcolor>
         <focusedcolor>Selected</focusedcolor>
-        <selectedcolor>Highlight2</selectedcolor>
+        <selectedcolor>$VAR[ColorHighlight]</selectedcolor>
         <disabledcolor>dialog_fg_12</disabledcolor>
         <texturefocus colordiffuse="dialog_bg_30">common/white.png</texturefocus>
         <texturenofocus/>
@@ -31,7 +31,7 @@
         <font>font_small</font>
         <textcolor>dialog_fg_70</textcolor>
         <focusedcolor>Selected</focusedcolor>
-        <selectedcolor>Highlight2</selectedcolor>
+        <selectedcolor>$VAR[ColorHighlight]</selectedcolor>
         <disabledcolor>dialog_fg_12</disabledcolor>
         <scrollout>false</scrollout>
         <pauseatend>2000</pauseatend>
@@ -48,7 +48,7 @@
         <textcolor>dialog_fg_70</textcolor>
         <focusedcolor>Selected</focusedcolor>
         <disabledcolor>dialog_fg_30</disabledcolor>
-        <selectedcolor>Highlight2</selectedcolor>
+        <selectedcolor>$VAR[ColorHighlight]</selectedcolor>
         <texturefocus colordiffuse="dialog_bg_12">common/white.png</texturefocus>
         <texturenofocus/>
         <pulseonselect>false</pulseonselect>
@@ -61,7 +61,7 @@
         <textoffsetx>30</textoffsetx>
         <textcolor>dialog_fg_70</textcolor>
         <focusedcolor>Selected</focusedcolor>
-        <selectedcolor>Highlight2</selectedcolor>
+        <selectedcolor>$VAR[ColorHighlight]</selectedcolor>
         <disabledcolor>dialog_fg_30</disabledcolor>
         <texturefocus colordiffuse="dialog_bg_12">common/white.png</texturefocus>
         <texturenofocus/>
@@ -81,7 +81,7 @@
         <textcolor>dialog_fg_70</textcolor>
         <focusedcolor>Selected</focusedcolor>
         <disabledcolor>dialog_fg_12</disabledcolor>
-        <selectedcolor>Highlight2</selectedcolor>
+        <selectedcolor>$VAR[ColorHighlight]</selectedcolor>
         <texturefocus colordiffuse="dialog_bg_12">common/white.png</texturefocus>
         <texturenofocus/>
         <textureradiofocus colordiffuse="dialog_fg_70">buttons/radio-on.png</textureradiofocus>
@@ -99,7 +99,7 @@
         <textcolor>dialog_fg_70</textcolor>
         <focusedcolor>Selected</focusedcolor>
         <disabledcolor>dialog_fg_12</disabledcolor>
-        <selectedcolor>Highlight2</selectedcolor>
+        <selectedcolor>$VAR[ColorHighlight]</selectedcolor>
         <texturefocus colordiffuse="dialog_bg_12">common/white.png</texturefocus>
         <texturenofocus/>
         <textureup flipy="true" colordiffuse="dialog_fg_30">buttons/spin-down.png</textureup>
@@ -122,7 +122,7 @@
         <textcolor>dialog_fg_70</textcolor>
         <focusedcolor>Selected</focusedcolor>
         <disabledcolor>dialog_fg_12</disabledcolor>
-        <selectedcolor>Highlight2</selectedcolor>
+        <selectedcolor>$VAR[ColorHighlight]</selectedcolor>
         <texturefocus colordiffuse="dialog_bg_12">common/white.png</texturefocus>
         <texturenofocus/>
         <textureup flipy="true" colordiffuse="dialog_fg_30">buttons/spin-down.png</textureup>
@@ -162,7 +162,7 @@
 
     <default type="sliderex">
         <orientation>horizontal</orientation>
-        <selectedcolor>Highlight2</selectedcolor>
+        <selectedcolor>$VAR[ColorHighlight]</selectedcolor>
         <sliderwidth>230</sliderwidth>
         <sliderheight>23</sliderheight>
         <pulseonselect>false</pulseonselect>
@@ -195,7 +195,7 @@
         <font>font_small</font>
         <textcolor>dialog_fg_70</textcolor>
         <shadowcolor/>
-        <selectedcolor>Highlight2</selectedcolor>
+        <selectedcolor>$VAR[ColorHighlight]</selectedcolor>
         <pagecontrol>61</pagecontrol>
         <autoscroll delay="6000" time="3000" repeat="10000"/>
     </default>
