@@ -75,61 +75,13 @@
                 <include>Animation_FadeIn_SlideUp</include>
                 <control type="group">
                     <visible>Integer.IsGreater(Container(1103).NumItems,7)</visible>
-                    <height>662</height>
-                    <include>Defs_Powermenu_Group</include>
-                    <include>Defs_Options_Texture</include>
-                </control>
-                <control type="group">
-                    <visible>Integer.IsEqual(Container(1103).NumItems,7)</visible>
-                    <height>592</height>
-                    <include>Defs_Powermenu_Group</include>
-                    <include>Defs_Options_Texture</include>
-                </control>
-                <control type="group">
-                    <visible>Integer.IsEqual(Container(1103).NumItems,6)</visible>
-                    <height>522</height>
-                    <include>Defs_Powermenu_Group</include>
-                    <include>Defs_Options_Texture</include>
-                </control>
-                <control type="group">
-                    <visible>Integer.IsEqual(Container(1103).NumItems,5)</visible>
-                    <height>452</height>
-                    <include>Defs_Powermenu_Group</include>
-                    <include>Defs_Options_Texture</include>
-                </control>
-                <control type="group">
-                    <visible>Integer.IsEqual(Container(1103).NumItems,4)</visible>
-                    <height>382</height>
-                    <include>Defs_Powermenu_Group</include>
-                    <include>Defs_Options_Texture</include>
-                </control>
-                <control type="group">
-                    <visible>Integer.IsEqual(Container(1103).NumItems,3)</visible>
-                    <height>312</height>
-                    <include>Defs_Powermenu_Group</include>
-                    <include>Defs_Options_Texture</include>
-                </control>
-                <control type="group">
-                    <visible>Integer.IsEqual(Container(1103).NumItems,2)</visible>
-                    <height>242</height>
-                    <include>Defs_Powermenu_Group</include>
-                    <include>Defs_Options_Texture</include>
-                </control>
-                <control type="group">
-                    <visible>Integer.IsEqual(Container(1103).NumItems,1)</visible>
-                    <height>172</height>
+                    <height>732</height>
                     <include>Defs_Powermenu_Group</include>
                     <include>Defs_Options_Texture</include>
                 </control>
                 <control type="group">
                     <animation effect="slide" end="0,35" condition="true">Conditional</animation>
-                    <animation effect="slide" end="0,35" condition="Integer.IsLess(Container(1103).NumItems,8)">Conditional</animation>
-                    <animation effect="slide" end="0,35" condition="Integer.IsLess(Container(1103).NumItems,7)">Conditional</animation>
-                    <animation effect="slide" end="0,35" condition="Integer.IsLess(Container(1103).NumItems,6)">Conditional</animation>
-                    <animation effect="slide" end="0,35" condition="Integer.IsLess(Container(1103).NumItems,5)">Conditional</animation>
-                    <animation effect="slide" end="0,35" condition="Integer.IsLess(Container(1103).NumItems,4)">Conditional</animation>
-                    <animation effect="slide" end="0,35" condition="Integer.IsLess(Container(1103).NumItems,3)">Conditional</animation>
-                    <animation effect="slide" end="0,35" condition="Integer.IsLess(Container(1103).NumItems,2)">Conditional</animation>
+                    <height>662</height>
                     <include>Defs_Powermenu_Group</include>
                     <control type="label" id="3">
                         <top>-64</top>
