@@ -1,5 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<addon id="skin.aura" version="0.9.34" name="Aura" provider-name="jurialmunkey">
+<addon id="skin.aura" version="0.9.36" name="Aura" 
+provider-name="jurialmunkey">
     <requires>
         <import addon="xbmc.gui" version="5.14.0"/>
         <import addon="script.skinshortcuts" version="0.4.0"/>
