@@ -1,5 +1,7 @@
 [B]0.9.36[/B]
 Add Dependencies button to AddonInfo
+Tweak Selected item colour
+Add checkmark to selected items in DialogSelect and FileManager
 
 [B]0.9.35[/B]
 Work on Kodi Games section begins
